# DealSignals

./: .gitignore  AGENTS.md  Methodology.md  README.md  pyproject.toml
case-studies/wework-bowx/data/: DATA_COLLECTION_SUMMARY.md
case-studies/wework-bowx/layers/01-contamination/: prompt.md  run_contamination.py
dealsignals/: __init__.py
dealsignals/cli/: __init__.py
dealsignals/core/: __init__.py  config.py  types.py
dealsignals/experiment/: __init__.py  definition.py  runner.py  state.py
dealsignals/parsing/: __init__.py  ocr_client.py
dealsignals/providers/: __init__.py  base.py  direct.py  registry.py  zenmux.py
dealsignals/questions/: __init__.py  bank.py  loader.py
docs/plans/: 2026-01-14-layer-02-direct-llm-design.md  2026-01-15-layer-02-direct-fairness-design.md  2026-01-15-layer-02-direct-fairness-implementation.md  2026-01-16-layer-03-ocr-service-design.md  2026-01-23-layer-03-parsing-implementation.md
docs/reports/: 2026-01-16-layer-02-direct-run-report.md  2026-01-24-layer-03-ocr-failure-report.md
experiments/wework-bowx/: config.yaml
experiments/wework-bowx/data/: FILING_GUIDE.md  README.md
experiments/wework-bowx/data/layer-02/: layer-02_meta.json  (+2 more)
experiments/wework-bowx/ground-truth/: Human_Review.md  Human_gt_q1_q10.md  README.md  answers.yaml  questions.yaml
journal/: 2026-01-13-layer02-design.md  jan5-jan11-2026.md
lib/: costs.py  llm.py
scripts/: download_sec_filings.py  prep_layer_02.py  prep_layer_03.py  run.py
tests/: test_layer_03_config.py  test_ocr_client.py  test_prep_layer_02.py  test_prep_layer_03.py
(+2033 files in other folders)
